--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
   <body>
+    <!--HEADER-->
     <header>
       <div class="logo">
-        <img src="resources/images/ic-logo.svg" alt="">
+        <img src="resources/images/ic-logo.svg" alt="Colmar Academy logo">
         <h1>Colmar</h1>
         <h1>Academy</h1>
       </div>
@@ -22,9 +23,10 @@
         </ul>
       </nav>
     </header>
-
+    <!--BANNER SECTION-->
     <div class="banner">
-      <img src="resources/images/banner.jpg" alt="">
+      <img class="left" src="resources/images/banner.jpg"
+        alt="Image of students studying together at picnic table">
       <div class="banner-caption">
         <h2>Learn something new everyday</h2>
         <p>Lorem ipsum dolor sit amet,
@@ -32,8 +34,49 @@
         </p>
         <a href="#">Start Here</a>
       </div>
-
     </div>
-
+    <!--INFORMATION SECTION-->
+    <div class="information">
+      <div class="info-left">
+        <img src="resources/images/information-main.jpg"
+          alt="Image of student reading on campus">
+        <h2>It doesn't hurt to keep practicing</h2>
+        <p>&#34Curabitur vitae libero in ipsum porttitor consequat.
+            Aliquam et commodo lectus, nec consequat neque. Sed non accumsan
+            urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur
+            dolor consequat, tristique ligula.&#34</p>
+        <p class="quoted">Emanuel, Sr Strategist at Hiring.com</p>
+      </div>
+      <div class="info-right">
+        <div class="detail" id="orientation">
+          <img src="resources/images/information-orientation.jpg"
+            alt="Image of students walking on campus">
+          <div class="info">
+            <h3>Orientation date</h3>
+            <p>Tue 10/11 &#38 Wed 10/12: 8am-3pm</p>
+            <a href="#">Read more</a>
+          </div>
+        </div>
+        <div class="detail" id="campus">
+          <img src="resources/images/information-campus.jpg"
+            alt="Image of campus center interior">
+          <div class="info">
+            <h3>Our Campus</h3>
+            <p>Find which campus is close by you</p>
+            <a href="#">Read more</a>
+          </div>
+        </div>
+        <div class="detail" id="lecture">
+          <img src="resources/images/information-guest-lecture.jpg"
+            alt="Image of guest lecturer">
+          <div class="info">
+            <h3>Our guest lecture</h3>
+            <p>Join a keynote with Oliver Sack about music
+              in medical treatment</p>
+            <a href="#">Read more</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
