--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       </div>
     </div>
     <!--INFORMATION SECTION-->
-    <div class="information">
-      <div class="info-left">
+    <div class="container-columns">
+      <div class="column-left">
         <img src="resources/images/information-main.jpg"
           alt="Image of student reading on campus">
         <h2>It doesn't hurt to keep practicing</h2>
@@ -47,7 +47,7 @@
             dolor consequat, tristique ligula.&#34</p>
         <p class="quoted">Emanuel, Sr Strategist at Hiring.com</p>
       </div>
-      <div class="info-right">
+      <div class="column-right">
         <div class="detail" id="orientation">
           <img src="resources/images/information-orientation.jpg"
             alt="Image of students walking on campus">
@@ -78,5 +78,124 @@
         </div>
       </div>
     </div>
+    <!--COURSES SECTION-->
+    <div class="subjects">
+      <h2>Start learning</h2>
+      <div class="container">
+        <div class="course" id="software-engineering">
+          <div class="title">
+            <img src="resources/images/course-software.jpg"
+              alt="Computers">
+            <h3>Software engineering</h3>
+            <h4>Courses</h4>
+          </div>
+          <div class="listing">
+            <p>Web Development, Mobile Development, iOT,
+             APIs</p>
+          </div>
+        </div>
+        <div class="course" id="computer-art">
+          <div class="title">
+            <img src="resources/images/course-computer-art.jpg"
+              alt="Hand with smart phone">
+            <h3>Computer art</h3>
+            <h4>Courses</h4>
+          </div>
+          <div class="listing">
+            <p>Imaging &amp; Design, Web Design, Motion Graphics &amp;
+             Visual Effects, Computer Animation</p>
+          </div>
+        </div>
+        <div class="course" id="course-design">
+          <div class="title">
+            <img src="resources/images/course-design.jpg"
+              alt="Person with camera">
+            <h3>Design</h3>
+            <h4>Courses</h4>
+          </div>
+          <div class="listing">
+            <p>User Experience Design, User Research,
+             Visual Design</p>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="course bottom" id="data">
+          <div class="title">
+            <img src="resources/images/course-data.jpg"
+              alt="Laptop with graphs on screen">
+            <h3>Data</h3>
+            <h4>Courses</h4>
+          </div>
+          <div class="listing">
+            <p>Data Science, Big Data, SQL, Data Visualization</p>
+          </div>
+        </div>
+        <div class="course bottom" id="business">
+          <div class="title">
+            <img src="resources/images/course-business.jpg"
+              alt="Chess board">
+            <h3>Business</h3>
+            <h4>Courses</h4>
+          </div>
+          <div class="listing">
+            <p>Product Development, Business Development, Startup</p>
+          </div>
+        </div>
+        <div class="course bottom" id="marketing">
+          <div class="title">
+            <img src="resources/images/course-marketing.jpg"
+              alt="Hand with smart watch">
+            <h3>Marketing</h3>
+            <h4>Courses</h4>
+          </div>
+          <div class="listing">
+            <p>Analytics, Content Marketing, Mobile Marketing</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--THESIS SECTION-->
+    <div class="thesis">
+      <h2>Thesis Exhibit</h2>
+      <div class="container-columns">
+        <div class="column-left">
+          <video src="resources/videos/thesis.mp4" autoplay poster="posterimage.jpg"></video>
+          <h5>Reimagine urban</h5>
+          <p>&#34Curabitur vitae libero in ipsum porttitor consequat.
+              Aliquam et commodo lectus, nec consequat neque. Sed non accumsan
+              urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur
+              dolor consequat, tristique ligula.&#34</p>
+        </div>
+        <div class="column-right">
+          <div class="detail" id="fisma">
+            <img src="resources/images/thesis-fisma.jpg"
+              alt="Image of students walking on campus">
+            <div class="info">
+              <h3>Fisma: Design and</h3>
+              <p>Designer showcase of new prototype product</p>
+            </div>
+          </div>
+          <div class="detail" id="now-then">
+            <img src="resources/images/thesis-now-and-then.jpg"
+              alt="Image of campus center interior">
+            <div class="info">
+              <h3>Now and then</h3>
+              <p>Research study about New York</p>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+      <!--FOOTER SECTION-->
+      <footer>
+        <p>Copyright 2016 Colmar Academy. All rights reserved.</p>
+        <nav>
+          <ul>
+            <li>Terms</li>
+            <li>Privacy</li>
+          </ul>
+        </nav>
+      </footer>
   </body>
 </html>
