--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Colmar Academy</title>
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
     <!--HEADER-->
